# korg_nanokontrol

./: CMakeLists.txt  README.md  keymap.nktrl2_data  package.xml
nodes/: kontrol.py  kontrol.py~  kontrol_sim.py
