<package>
  <name>korg_nanokontrol2</name>
  <version>0.1.1</version>
  <description>
      ROS driver to use the Korg NanoKontrol 2 MIDI device as a joystick.
  </description>
  <maintainer email="justinthomas@jtwebs.net">Justin Thomas</maintainer>
  <license>BSD</license>
  <author>Austin Hendrix</author>
  <url>http://ros.org/wiki/korg_nanokontrol</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>python-pygame</run_depend>
  
</package>
